--- a/ocm/src/test/Makefile.am
+++ b/ocm/src/test/Makefile.am
@@ -5,4 +5,4 @@ AM_LDFLAGS = @EVENTLIBS@ -lpthread -lzap -levent -levent_pthreads \
 	     @OVIS_LIB_LIBDIR_FLAG@
 
 ocmtest_SOURCES = ocmtest.c
-ocmtest_LDADD = ../libocm.la
+ocmtest_LDADD = ../ocm/libocm.la
