--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -93,8 +93,8 @@ Doxygen files for ldms-all package.
 %{_datadir}/doc/%{name}-%{version}
 %docdir %{_defaultdocdir}
 %changelog
-* Thur May 23 2015 Ben Allan <baallan@sandia.gov> 2.4.2-1
-slurmid options and csv order features.
+* Thu May 23 2015 Ben Allan <baallan@sandia.gov> 2.4.2-1
+update to latest upstream.
 * Thu Apr 23 2015 Ben Allan <baallan@sandia.gov> 2.4.1-1
 packaging with sysclassib and procstatutil2 enabled.
 * Wed Feb 18 2015 Ben Allan <baallan@sandia.gov> 2.4.0-1
