Added install list item for slurm plugin man.

--- a/util/man/Makefile.am
+++ b/util/man/Makefile.am
@@ -17,6 +17,7 @@ Plugin_procnfs.man \
 Plugin_procsensors.man \
 Plugin_procstatutil.man \
 Plugin_procstatutil2.man \
+Plugin_slurmjobid.man \
 Plugin_store_csv.man \
 Plugin_store_derived_csv.man \
 Plugin_sysclassib.man \
