--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -6,7 +6,7 @@ _ldms_la_SOURCES = ldms.c $(SWIG_SOURCES)
 _ldms_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src/core \
 		 @OVIS_LIB_INCDIR_FLAG@
 _ldms_la_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@  $(PYTHON_LDFLAGS) -module
-_ldms_la_LIBADD = $(top_builddir)/src/core/libldms.la
+_ldms_la_LIBADD = $(top_builddir)/src/core/libldms.la -lpthread
 
 ldms.py : ldms.c
 
