ldmsd, ldmsd-python: Bug fixes and build script for ldmsd python package
- Fixed a bug in ldmsd_config.py that surfaces when unix domain
  socket and inet are alternately used  to controll an ldmsd process
- Added Makefile.am and appropriate build options for the ldmsd pythong module
  and the ldmsd_controller program
- Fixed a bug in ldmsd_controller when printing responses from ldmsd
- Fixed wrong command IDs in ldmsd_config.py

Change-Id: Ibdf6e8afb04288fcf389789e1685e94580abf0fb

--- a/ldms/Makefile.am
+++ b/ldms/Makefile.am
@@ -6,6 +6,11 @@ endif
 if ENABLE_ETC
 SUBDIRS += etc
 endif
+
+if ENABLE_LDMS_PYTHON
+SUBDIRS += python
+endif
+
 LDMS = $(PACKAGE_NAME)-$(PACKAGE_VERSION)
 LDMS_TARBALL = $(LDMS).tar.gz
 OPV=-$(PACKAGE_VERSION)
