all: addressing sysconfdir
- Do not assume /etc/ configuration installation
- Use sysconfdir for config file installation
- Use DESTDIR to support staged installation (as needed for rpm and
  deb). See https://www.gnu.org/prep/standards/html_node/DESTDIR.html

Change-Id: I00ad613cb0756eb805f0c7045fa3b2d950b41d82

--- a/baler/etc/init.d/balerd.in
+++ b/baler/etc/init.d/balerd.in
@@ -33,8 +33,9 @@ else
 	}
 fi
 
-. /etc/profile.d/set-ovis-variables.sh
-. /etc/ovis/ovis-functions.sh
+prefix=@prefix@
+. $(sysconfdir)/profile.d/set-ovis-variables.sh
+. $(sysconfdir)/ovis/ovis-functions.sh
 
 if [ -z $OVIS_HOME ]; then
 	OVIS_HOME=@prefix@
