--- a/baler/swig/Makefile.am
+++ b/baler/swig/Makefile.am
@@ -10,8 +10,7 @@ _bquery_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) $(INC)
 _bquery_la_LDFLAGS = -module -shared $(PYTHON_LDFLAGS) @SOS_LIBDIR_FLAG@
 _bquery_la_LIBADD = $(top_builddir)/src/query/libbquery.la \
 		    $(top_builddir)/src/baler/libbaler.la \
-		    -lsos \
-		    -lobjidx
+		    -lsos
 
 pkgpyexecdir = $(pkgpythondir)
 
