--- a/lib/src/ovis_auth/Makefile.am
+++ b/lib/src/ovis_auth/Makefile.am
@@ -6,5 +6,5 @@ libovis_auth_la_SOURCES = auth.c auth.h
 libovis_authinclude_HEADERS =  auth.h
 libovis_authincludedir = $(includedir)/ovis_auth
 libovis_auth_conf = /etc/ld.so.conf.d/libovis_auth.conf
-libovis_auth_la_LIBADD = @OPENSSL_LIBS@
+libovis_auth_la_LIBADD = -lrt @OPENSSL_LIBS@
 lib_LTLIBRARIES += libovis_auth.la
