ldmsd: Fixed libreadline dependency
- Added ax_lib_readline.m4 to be able to build with the disable/enable libreadline
  options.
- Modified ldms/configure.ac ldms/src/ldmsd/Makefile.am to use the macro from
  ax_lib_readline.m4.
- Fixed ldmsctl.c so that it can be compiled if libreadline doesn't exist.

Change-Id: I8fe9731db2f7e8b045b460418740e3cbbd76f2d2

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -113,12 +113,10 @@ dnl Reset LIBS variable.
 LIBS=""
 
 dnl Check for libreadline
-AC_ARG_WITH([ldflags-readline],[AS_HELP_STRING([--with-ldflags-readline],[link flags needed for deficient readline libraries, eg needing -ltermcap.])],[LDFLAGS_READLINE=$with_ldflags_readline],[])
-AC_MSG_NOTICE([User gave $LDFLAGS_READLINE for readline support])
-AC_SUBST([LDFLAGS_READLINE])
-AC_CHECK_LIB(readline, readline, [],
-    AC_MSG_ERROR([libreadline not found. ldms requires libreadline.]),[$LDFLAGS_READLINE])
-dnl Reset LIBS variable.
+AX_LIB_READLINE
+READLINE_LDFLAGS=$READLINE_LIBS
+AC_SUBST([READLINE_LDFLAGS])
+AC_SUBST([READLINE_CFLAGS])
 LIBS=""
 
 dnl Checks for libraries
