--- a/util/sample_init_scripts/genders/Makefile.am
+++ b/util/sample_init_scripts/genders/Makefile.am
@@ -1,6 +1,11 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders
-SUBDIRS= etc
+SUBDIRS= etc 
+
+if ENABLE_LIBGENDERS
+SUBDIRS += src
+endif
+
 dist_doc_DATA = \
 README \
 README.LDMS.genders
