--- a/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
@@ -2,20 +2,12 @@
 # This file is the location for overrides to ldmsd settings
 # taken from genders with nodeattr.
 # Use of this file to tailor individual nodes, except in small installations, 
-# is prone to causing # difficult-to-diagnose configuration inconsistencies.
+# is prone to causing difficult-to-diagnose configuration inconsistencies.
 # Proceed with care.
 
 # grab all the sampler config data, because we may need it
 . /etc/sysconfig/ldmsd
 
-# TESTING should be true or false
-TESTING=/bin/false
-#TESTING=/bin/true
-if $TESTING; then
-	host=ataco-login4
-else
-	host=$HOSTNAME
-fi
 
 # caution, the following variables override gender settings for all nodes
 # if set to non-empty values.
@@ -52,12 +44,12 @@ AGG_COLLECTION_OFFSET=
 # overrides gender: ldmsaggd_stores
 STORES=
 
-STORE_PATH=/tmp/ldmsdata
+STORE_PATH=/projects/ovis/ClusterData/ataco/store_csv
 
 # store specialized plugin config args
 # overrides genders: ldmsaggd_SUFFIX where SUFFIX is the store plugin name.
-AGG_CONFIG_store_csv=
-AGG_CONFIG_store_derived_csv=
+#AGG_CONFIG_store_csv=altheader/1:rollover/3600:rolltype/1:id_pos/1
+#AGG_CONFIG_store_derived_csv=altheader/1:rollover/3600:rolltype/1:id_pos/1
 
 ## next options are not yet supported.
 ## sampler-related store customizations
