--- a/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
@@ -12,21 +12,18 @@ NODEATTRFILE="-f /etc/genders.ldms"
 
 USER=root
 export USER
-# set DEBUG_INITD empty to turn off script debugging
-DEBUG_INITD=/bin/true
 
-# TESTING should be true or false
-TESTING=/bin/false
-#TESTING=/bin/true
-if $TESTING; then
-	host=atacoadmin1
-else
-	host=$HOSTNAME
-fi
+
+# hostfull comes from env, and might be short or not.
+hostfull=$HOSTNAME
+
+# MYHOSTNAME is a hostname that doesn't contain the domain name
+host="$( echo $hostfull | cut -d "." -f1 )"
+MYHOSTNAME=$host
 
 # If given, platname
 # overrides gender: cluster
-PLATNAME=
+PLATNAME=aries
 if test -z "$PLATNAME"; then
 	PLATNAME=`nodeattr $NODEATTRFILE -v $host cluster`
 fi
