sets from query tool

--- a/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
@@ -7,12 +7,12 @@
 # Proceed with care, then go back and edit your genders file instead.
 
 # Normally NODEATTRFILE should be empty, else '-f <pathtofile>'
+export LDMS_GENDERS=/etc/genders.ldms
 NODEATTRFILE=
-NODEATTRFILE="-f /etc/genders.ldms"
+NODEATTRFILE="-f $LDMS_GENDERS"
 
 USER=root
 export USER
-
 
 # hostfull comes from env, and might be short or not.
 hostfull=$HOSTNAME
