Got rid of excessive overrides. Tested narcissism on aries.

--- a/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldms-aggd.conf
@@ -1,67 +1,20 @@
 # loaded from sysconfig/ldms-aggd
-# This file is the location for overrides to ldmsd settings
-# taken from genders with nodeattr.
-# Use of this file to tailor individual nodes, except in small installations, 
-# is prone to causing difficult-to-diagnose configuration inconsistencies.
-# Proceed with care.
+# This file sets invariant across the cluster values not handled with genders.
+# To customize aggregators, copy/modify the genders file and point to the
+# new genders file from ldmsd.conf
 
-# grab all the sampler config data, because we may need it
+# grab all the sampler config data, because we may need it.
 . /etc/sysconfig/ldmsd
 
-# caution, the following variables override gender settings for all nodes
-# if set to non-empty values.
+STORE_PATH=/projects/ovis/ClusterData/aries/store_csv
 
-# 0 to disable or 1 to enable regardless of gender.
-# 1 will cause node types to run ldms-aggd that are not expected
-# unless a hostname based 'if' test is wrapped around the assignment.
-# overrides gender: ldmsaggd
-LDMSAGGD=
+# number to start 'compid' of aggregators for use in file system
+# name computations. Should be larger than highest real compid in cluster.
+# Default is 1000000.
+#AGG_ID_BASE=
 
-# make all daemons log at the same level; gender control is finer grained.
-# overrides gender: ldmsaggd_dbg
-AGG_DEBUG=DEBUG
-
-# protocol plugin to use for getting data from aggregators
-# overrides gender: ldmsaggd_xprt
-AGG_LDMSD_TRANSPORT=
-
-# Port to use for all aggregators instead of gender or 411 default
-# overrides gender: ldmsaggd_port
-AGG_PORT=412
-
-# How often (in microseconds) to sample metrics.
-# AGG_COLLECTION_INTERVAL=$NODE_COLLECTION_INTERVAL is allowable
-# overrides gender: ldmsaggd_interval_default
-AGG_COLLECTION_INTERVAL=
-
-# How long after collection to aggregate
-# overrides gender: ldmsaggd_offset_default
-AGG_COLLECTION_OFFSET=
-
-# store plugins to load, separated by :. Whitespace illegal.
-# e.g. store_csv:store_derived_csv
-# overrides gender: ldmsaggd_stores
-STORES=
-
-STORE_PATH=/projects/ovis/ClusterData/ataco/store_csv
-
-# store specialized plugin config args
-# overrides genders: ldmsaggd_SUFFIX where SUFFIX is the store plugin name.
-#AGG_CONFIG_store_csv=altheader/1:rollover/3600:rolltype/1:id_pos/1
-#AGG_CONFIG_store_derived_csv=altheader/1:rollover/3600:rolltype/1:id_pos/1
-
-## next options are not yet supported.
-## sampler-related store customizations
-## overrides gender: ldmsaggd_interval_SUFFIX
-#AGG_INTERVAL_meminfo=
-## overrides gender: ldmsaggd_offset_SUFFIX
-#AGG_OFFSET_meminfo=
-
-#Paths to unix domain socket used by ldmsctl to communicate with ldmsaggd
-LDMSAGGD_LOCAL_SOCK_DIR=
-LDMSAGGD_LOCAL_SOCK=
-LDMSAGGCTL_SOCK_DIR=
-
-AGG_MEM=
-AGG_NUM_PROCS=
-AGG_CONN_THREADS=
+# Paths to unix domain socket used by ldmsctl to communicate with ldmsaggd.
+# Very rarely need to be changed for the sysadmin case.
+#LDMSAGGD_LOCAL_SOCK_DIR=
+#LDMSAGGD_LOCAL_SOCK=
+#LDMSAGGCTL_SOCK_DIR=
