--- a/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
@@ -1,15 +1,15 @@
 # loaded from sysconfig/ldmsd
-# This file is the location for clusterwide overrides to ldmsd settings
-# taken from genders with nodeattr.
-#
-# Use of this file to tailor individual nodes, except in small installations, 
-# is prone to causing difficult-to-diagnose configuration inconsistencies.
-# Proceed with care, then go back and edit your genders file instead.
+# This file is the location for redirecting to an alternate genders file
+# and for setting other invariant environment bits not set via genders.
 
-# Normally NODEATTRFILE should be empty, else '-f <pathtofile>'
-export LDMS_GENDERS=/etc/genders.ldms
-NODEATTRFILE=
+#export LDMS_GENDERS=/projects/ovis/ClusterData/ataco/genders.ldms
+export LDMS_GENDERS=/etc/genders.aries
+
 NODEATTRFILE="-f $LDMS_GENDERS"
+
+# where to send logs. if filesystem, must be directory existing everywhere.
+# default if empty is to use syslog instead. To suppress entirely, set to NONE.
+LDMSD_LOG_PATH=/var/log/ldmsd/aries
 
 USER=root
 export USER
@@ -21,8 +21,8 @@ hostfull=$HOSTNAME
 host="$( echo $hostfull | cut -d "." -f1 )"
 MYHOSTNAME=$host
 
-# If given, platname
-# overrides gender: cluster
+# If given, platname overrides gender: cluster
+# 
 PLATNAME=aries
 if test -z "$PLATNAME"; then
 	PLATNAME=`nodeattr $NODEATTRFILE -v $host cluster`
@@ -53,76 +53,11 @@ experimental)
 esac
 export LD_LIBRARY_PATH=$libdir:$libevent2_libdir:$LD_LIBRARY_PATH
 
-# caution, the following override gender settings for all nodes
-# if set to non-empty values.
-
-# 0 to disable or 1 to enable regardless of gender.
-# 1 may cause node types to run ldmsd that are not expected.
-# overrides gender: ldmsd
-LDMSD=
-
 # set 1 if RDMAV_FORK_SAFE=1 is needed by ldmsd network usage.
 # or empty if not
 LDMS_RDMAV_FORK_SAFE=1
 
-# where to send logs. if filesystem, must be directory existing everywhere.
-# default if empty is to use syslog instead.
-LDMSD_LOG_PATH=
-
-# make all daemons log at the same level; gender control is finer grained.
-# overrides gender: ldmsd_dbg
-LDMSD_LOG_LEVEL=
-
-# protocol plugin to use everywhere.
-# overrides gender: ldmsd_xprt
-NODE_LDMSD_TRANSPORT=
-
-# Port to use everywhere instead of gender or 411 default
-# overrides gender: ldmsd_port
-NODE_PORT=
-
-# How often (in microseconds) to sample metrics
-# overrides gender: ldmsd_interval_default
-NODE_COLLECTION_INTERVAL=
-
-# How long after collection to aggregate
-# overrides gender: ldmsd_offset_default
-NODE_COLLECTION_OFFSET=
-
-# component id origin; with multiple node types, customizing this gets messy.
-# overrides gender: ldmsd_idbase
-NODE_ID_BASE=
-
-# daemon log verbosity
-# overrides gender: ldmsd_dbg
-NODE_DEBUG=
-
-# metric set plugins to load, separated by :. Whitespace illegal.
-# e.g. meminfo:procstatutil2
-# overrides gender: ldmsd_metric_sets
-METRIC_SETS=
-
-# metric set specialized plugin config args
-# overrides genders: ldmsd_SUFFIX where SUFFIX is the plugin name.
-NODE_CONFIG_lustre2_client=
-NODE_CONFIG_meminfo=
-NODE_CONFIG_procdiskstats=
-NODE_CONFIG_procdiskstats=
-NODE_CONFIG_procinterrupts=
-NODE_CONFIG_procnetdev=
-NODE_CONFIG_procnfs=
-NODE_CONFIG_procsensors=
-NODE_CONFIG_sysclassib=
-NODE_CONFIG_vmstat=
-# for example; other suffixes left to user
-NODE_INTERVAL_meminfo=
-NODE_OFFSET_meminfo=
-# e.g. NODE_CONFIG_PROCNETDEV="maxcpu=8 metrics_type=1"
-
-# you really really don't want to set this manually in a cluster.
-COMPONENT_ID=
-
-# very odd names to specify, unless running multiple sampler daemons.
-LDMSD_LOCAL_SOCK=
-LDMSD_LOCAL_SOCK_DIR=
-LDMSCTL_SOCK_DIR=
+# very odd values to specify, unless running multiple sampler daemons.
+#LDMSD_LOCAL_SOCK=
+#LDMSD_LOCAL_SOCK_DIR=
+#LDMSCTL_SOCK_DIR=
