fixed bugs in ldmsd script and cleanup.

--- a/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
+++ b/util/sample_init_scripts/genders/etc/sysconfig/ldmsd.conf
@@ -2,14 +2,13 @@
 # This file is the location for redirecting to an alternate genders file
 # and for setting other invariant environment bits not set via genders.
 
-#export LDMS_GENDERS=/projects/ovis/ClusterData/ataco/genders.ldms
-export LDMS_GENDERS=/etc/genders.aries
+export LDMS_GENDERS=/etc/genders.ldms.ataco
 
 NODEATTRFILE="-f $LDMS_GENDERS"
 
 # where to send logs. if filesystem, must be directory existing everywhere.
 # default if empty is to use syslog instead. To suppress entirely, set to NONE.
-LDMSD_LOG_PATH=/var/log/ldmsd/aries
+LDMSD_LOG_PATH=/var/log/ldmsd
 
 USER=root
 export USER
@@ -20,14 +19,6 @@ hostfull=$HOSTNAME
 # MYHOSTNAME is a hostname that doesn't contain the domain name
 host="$( echo $hostfull | cut -d "." -f1 )"
 MYHOSTNAME=$host
-
-# If given, platname overrides gender: cluster
-# 
-PLATNAME=aries
-if test -z "$PLATNAME"; then
-	PLATNAME=`nodeattr $NODEATTRFILE -v $host cluster`
-fi
-echoq platform is $PLATNAME
 
 # a bit of local sandia hackery for testing non-image ldmsd installs
 BUILDTYPE="toss"
