ldms, ldmsd: Fixed build variables/options & ldmsd cmd-line options
- Fixed the inconsistent ldmsd_rctrl vs ldmsd_rctl options
- Now ldmsd always enables the inet control port command-line option.

Change-Id: I5e19e69ecbd5c927211450a292c6f99b3bb91615

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -91,7 +91,7 @@ OPTION_WITH([libevent], [LIBEVENT])
 OPTION_DEFAULT_DISABLE([ocm], [ENABLE_OCM])
 OPTION_WITH([ocm], [OCM])
 
-OPTION_DEFAULT_DISABLE([ldmsd-rctrl], [ENABLE_LDMSD_RCTRL])
+OPTION_DEFAULT_DISABLE([ldmsd-rctl], [ENABLE_LDMSD_RCTL])
 OPTION_DEFAULT_DISABLE([ldms-python], [ENABLE_LDMS_PYTHON])
 
 if test -z "$ENABLE_MYSQL_TRUE"
