--- a/packaging/ovis-base.spec.in
+++ b/packaging/ovis-base.spec.in
@@ -17,7 +17,7 @@ License: GPLv2 or BSD
 Group: %{ldms_all}
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 Source: %{name}-%{version}.tar.gz
-Requires: rpm >= 4.8.0 ovis-libevent2
+Requires: rpm >= 4.8.0 ovis-libevent2 boost-devel
 BuildRequires: doxygen openssl-devel libibverbs-devel librdmacm-devel gcc ovis-libevent2-devel glib2-devel libibmad-devel
 Url: http://ovis.ca.sandia.gov/
 
@@ -52,6 +52,9 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/ovis-ldms/lib*.la
 rm $RPM_BUILD_ROOT%{_bindir}/test_*
 rm $RPM_BUILD_ROOT%{_bindir}/ldms_ban.sh
 mv $RPM_BUILD_ROOT%{_docdir}/ovis-ldms-*/* $RPM_BUILD_ROOT%{_docdir}/%{name}-%{version}/
+mkdir $RPM_BUILD_ROOT%{_sysconfdir}
+cp -r $RPM_BUILD_ROOT%{_docdir}/%{name}-%{version}/sample_init_scripts/genders/etc/init.d $RPM_BUILD_ROOT%{_sysconfdir}
+cp -r $RPM_BUILD_ROOT%{_docdir}/%{name}-%{version}/sample_init_scripts/genders/etc/sysconfig $RPM_BUILD_ROOT%{_sysconfdir}
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -81,6 +84,21 @@ package.
 %{_includedir}/*/*.h
 #end devel
 
+# initscripts
+%package initscripts
+Summary: LDMS initscripts for libgenders control of %{name}
+Group: %{ldms_grp}
+Requires: ldms-all = @VERSION@
+%description initscripts
+This is the libgenders based boot scripts for LDMS daemons.
+Users must provide information via /etc/genders (or alternate file)
+to make these scripts operate. They are required to fail out of the box.
+
+%files initscripts
+%defattr(-,root,root)
+%{_sysconfdir}/*/*
+#end initscripts
+
 %package doc
 Summary: Documentation files for %{name}
 Group: %{ldms_all}
@@ -93,8 +111,8 @@ Doxygen files for ldms-all package.
 %{_datadir}/doc/%{name}-%{version}
 %docdir %{_defaultdocdir}
 %changelog
-* Thu Apr 23 2015 Ben Allan <baallan@sandia.gov> 2.4.1-2-genders
-packaging of alpha genders build
+* Thu Jun 18 2015 Ben Allan <baallan@sandia.gov> 2.4.1-3-genders
+packaging of beta genders build
 * Thu Apr 23 2015 Ben Allan <baallan@sandia.gov> 2.4.1-1
 packaging with sysclassib and procstatutil2 enabled.
 * Wed Feb 18 2015 Ben Allan <baallan@sandia.gov> 2.4.0-1
