ldms: Added vector metric types
- Add vector metric types
- Add an exmaple ldmsd sampler plugin that uses array metric
- Modify metric printer in ldms_ls program to support array metric
  printint. The printing limit is 10 elements.

Change-Id: I3c8389409e819c0cf2f3754b6aa573461009ffea

--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -21,6 +21,12 @@ if ENABLE_HADOOP
 SUBDIRS += hadoop
 endif
 
+if ENABLE_ARRAY_EXAMPLE
+libarray_example_la_SOURCES = array_example.c
+libarray_example_la_LIBADD = $(COMMON_LIBADD)
+lib_LTLIBRARIES += libarray_example.la
+endif
+
 if ENABLE_MEMINFO
 libmeminfo_la_SOURCES = meminfo.c
 libmeminfo_la_LIBADD = $(COMMON_LIBADD)
