ldms: geminfo name change to kgnilnd and bug fixes
Change-Id: I3953bd001ad420d3ea16729c5526bd6755428288

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -48,7 +48,7 @@ OPTION_WITH([me], [ME])
 
 dnl Options for sampler
 OPTION_DEFAULT_ENABLE([sampler], [ENABLE_SAMPLER])
-OPTION_DEFAULT_DISABLE([geminfo], [ENABLE_GEMINFO])
+OPTION_DEFAULT_DISABLE([kgnilnd], [ENABLE_KGNILND])
 OPTION_DEFAULT_ENABLE([lustre], [ENABLE_LUSTRE])
 OPTION_DEFAULT_ENABLE([meminfo], [ENABLE_MEMINFO])
 OPTION_DEFAULT_ENABLE([array_example], [ENABLE_ARRAY_EXAMPLE])
