lib,ldmsd: Authentication for the inet control interface
- The change supports authentication on the inet control interface.
ldmsd_controller program also supports authentication.

- There are a couple bug fixes in the ovis_auth library.

- The Python APIs for the ovis_auth library is added.

Change-Id: Ia06979af6cd44396458d0b622e622b904bfc4efe

--- a/lib/configure.ac
+++ b/lib/configure.ac
@@ -25,7 +25,7 @@ OPTION_DEFAULT_ENABLE([coll], [ENABLE_COLL])
 OPTION_DEFAULT_ENABLE([mmalloc], [ENABLE_MMALLOC])
 OPTION_DEFAULT_ENABLE([ovis_ctrl], [ENABLE_OVIS_CTRL])
 OPTION_DEFAULT_ENABLE([ovis_util], [ENABLE_OVIS_UTIL])
-OPTION_DEFAULT_DISABLE([ovis_auth], [ENABLE_OVIS_AUTH])
+OPTION_DEFAULT_ENABLE([ovis_auth], [ENABLE_OVIS_AUTH])
 OPTION_DEFAULT_ENABLE([zap], [ENABLE_ZAP])
 OPTION_DEFAULT_DISABLE([rdma], [ENABLE_RDMA])
 OPTION_DEFAULT_DISABLE([ugni], [ENABLE_UGNI])
@@ -101,6 +101,7 @@ AC_CONFIG_FILES([ovis-lib.spec
 		src/zap/test/Makefile
 		swig/Makefile
 		swig/zap/Makefile
+		swig/ovis_auth/Makefile
 		etc/Makefile
 		etc/ovis/Makefile
 		etc/ovis/set-ovis-variables.sh
