--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS =
 pkglib_LTLIBRARIES =
 CORE = ../core
-BUILT_SOURCES = 
+BUILT_SOURCES =
 
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
@@ -42,6 +42,12 @@ if ENABLE_MEMINFO
 libmeminfo_la_SOURCES = meminfo.c
 libmeminfo_la_LIBADD = $(COMMON_LIBADD)
 pkglib_LTLIBRARIES += libmeminfo.la
+endif
+
+if ENABLE_MSR
+libmsr_la_SOURCES = msr.c
+libmsr_la_LIBADD = $(COMMON_LIBADD)
+pkglib_LTLIBRARIES += libmsr.la
 endif
 
 if ENABLE_PERFEVENT
