--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -19,6 +19,13 @@ libstore_flatfile_la_LIBADD = $(STORE_LIBADD)
 pkglib_LTLIBRARIES += libstore_flatfile.la
 endif
 
+if ENABLE_MSR
+libstore_msr_csv_la_SOURCES = store_msr_csv.c
+libstore_msr_csv_la_CFLAGS = $(AM_CFLAGS)
+libstore_msr_csv_la_LIBADD = $(STORE_LIBADD)
+pkglib_LTLIBRARIES += libstore_msr_csv.la
+endif
+
 ## if ENABLE_MYSQL
 ## libstore_mysql_la_SOURCES = store_mysql.c
 ## libstore_mysql_la_CFLAGS = $(AM_CFLAGS) @MYSQL_INCLUDE@
