--- a/ldms/src/store/Makefile.am
+++ b/ldms/src/store/Makefile.am
@@ -7,7 +7,7 @@ STORE_LIBADD = $(CORE)/libldms.la -lcoll -lovis_util \
 if ENABLE_SOS
 libstore_sos_la_SOURCES = store_sos.c
 libstore_sos_la_CFLAGS = @SOS_INCDIR_FLAG@ $(AM_CFLAGS)
-libstore_sos_la_LIBADD = -lsos @SOS_LIBDIR_FLAG@
+libstore_sos_la_LIBADD = -lsos @SOS_LIBDIR_FLAG@ $(STORE_LIBADD)
 lib_LTLIBRARIES += libstore_sos.la
 endif
 
