In preparation for KLDMS (kernel) support, move shared data structures from ldms.h, ldms_private.h, and ldms_xprt.h into a new include file ldms_core.h. This new include file is included by the existing include files.
Also fixed a couple problems in the ldmsd support for kernel metrics. Only
one mmap is now needed since meta data and data are contiguous. Also use
the correct size for the mmap.

Change-Id: Idf0b2219d1f9b8207e187f924dc1bd67e527fb12

--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -3,7 +3,7 @@ lib_LTLIBRARIES =
 AM_CFLAGS = -Wall $(DBGFLAGS)
 
 ldmscoreincludedir = $(includedir)/ldms
-ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h
+ldmscoreinclude_HEADERS = ldms.h ldms_core.h ldmsd.h ldms_xprt.h
 
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h
 libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
