--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -1,5 +1,5 @@
 BUILT_SOURCES = ldms.c ldms.py
-SWIG_SOURCES = ldms.i $(top_srcdir)/src/core/ldms.h
+SWIG_SOURCES = ldms.i $(top_srcdir)/src/core/ldms.h $(top_srcdir)/src/core/ldms_core.h
 pkgpython_PYTHON = ldms.py __init__.py
 pkgpyexec_LTLIBRARIES = _ldms.la
 _ldms_la_SOURCES = ldms.c $(SWIG_SOURCES)
