--- a/lib/src/zap/test/Makefile.am
+++ b/lib/src/zap/test/Makefile.am
@@ -12,3 +12,7 @@ zap_test_reconnect_LDADD = $(builddir)/../libzap.la -lpthread -ldl
 sbin_PROGRAMS += zap_test_disconnect
 zap_test_disconnect_SOURCES = zap_test_disconnect.c
 zap_test_disconnect_LDADD = $(builddir)/../libzap.la -lpthread -ldl
+
+sbin_PROGRAMS += zap_test_reconnect_many
+zap_test_reconnect__many_SOURCES = zap_test_reconnect_many.c
+zap_test_reconnect_many_LDADD = $(builddir)/../libzap.la -lpthread -ldl
